# rocktalk

./: pyproject.toml  requirements.txt
rocktalk/: app.py
rocktalk/components/: chat.py  sidebar.py
rocktalk/components/dialogs/: general_options.py  session_settings.py  template_settings.py
rocktalk/config/: settings.py
rocktalk/models/: interfaces.py  llm.py  storage_interface.py
rocktalk/storage/: sqlite_storage.py
rocktalk/utils/: js.py  log.py
scripts/: test_database.py
tests/: copy-to-clipboard-works.py  copy-to-clipboard.py  elements.py  stop.py  stop_example.py  test_app.py  test_storage.py
